[project]
name = "gifer"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Pisula",email = "adam.pisula@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false